# iuris-rag

./: .env.example  .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  ROADMAP_POST_V1.md  ROADMAP_v1_2.md  SCOPE.md  docker-compose.yml  pyproject.toml
core/: README.md
docs/: CHUNKING_POLICY.md
scripts/: build_gold_candidates.py  build_gold_validated.py  corpus_stats.py  corpus_stats_output.json  diagnose_corpus_231.py  diagnose_q5_retrieval.py  diagnose_zero_recall.py  ingest_corpus.py  ingest_hybrid.py  init_gold_answers.py  probe_eurlex_v2.py  probe_eurlex_v3.py  probe_norm.py  run_benchmark.py  run_benchmark_w3.py  run_benchmark_w3_rrk50.py  run_benchmark_w3_with_expansion.py  sample_annotation_231.py  sanity_check_corpus.py  smoke_eurlex.py  smoke_normattiva.py  validate_graph_chunk_ids.py
spike/: .gitignore  ANNOTATION_SAMPLING_231.md  BENCHMARK_DISTRIBUTION_ANALYSIS.md  BENCHMARK_RAGAS_W7_v2.md  BENCHMARK_RAGAS_W7_v2_subset.md  BENCHMARK_W3_v2.md  BENCHMARK_W3_v2_subset.md  BOOST_ARTICLE_RESULTS.md  CANDIDATES_V2_QDRANT_AUDIT.md  CORPUS_231_DIAG.md  CORPUS_INGESTION_AUDIT.md  CORPUS_REFERENCE_FOR_CURATION.md  CROSS_NORMA_DIAG_v1.md  EURLEX_FINDINGS.md  MPS_COABITATION_RESULTS.md  PHASE_E_MERGE_REPORT.md  PHASE_F1_DIAGNOSTIC.md  PHASE_F2_PREFLIGHT.md  PRE_BOOST_PRECHECK.md  PRE_FIX_DIAG_v1_1.md  PRE_PUSH_SECURITY_AUDIT.md  Q5_RETRIEVAL_DIAG.md  SANITY_Q68_DECOMP_v1_1.md  SMOKE_GOLD_COMPARISON.md  SMOKE_GOLD_COMPARISON_SPEC.md  SMOKE_RAG_PIPELINE_RESULTS.md  SMOKE_RAG_PIPELINE_RESULTS.ollama.md  SPIKE_PLAN.md  SPIKE_RESULTS.md  SUBSET_CROSS_NORM_V1_1_REBASELINE.md  SUBSET_CROSS_NORM_V1_1_RESULTS.md  V1_VS_V2_OVERLAP_VIEW.md  _audit_candidates_debug.json  _measure_prompt_len.py  _phase_e_merge_debug.json  _probe_ollama_cache.py  _prompt_Q1.txt  (+32 more)
(+137 files in other folders)
